# tools-tauri

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
files/: 进度表.xlsx
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: base_dbutils.rs  main.rs
src/interface/: Menu.ts  SearchIndex.ts
src/plugins/: http.ts
src/stores/: user.ts
src/views/: Admin.vue  index.vue
