[package]
name = "tools-tauri"
version = "0.0.1"
description = "最适合个人的工具"
authors = ["wth"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "shell-open", "devtools"] }
# 序列化工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# sqlite 连接工具
#rusqlite = { version = "0.29.0", features = ["bundled"] }
crossbeam = { version = "0.7.1" }
#连接工具
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"] }
# 一次性初始化对象工具包
once_cell = "1.13.0"
#数据库依赖
mysql = "20.0.0"
#处理时间
chrono = "0.4.19"
# 日志打印
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
